--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  color: rgb(60, 55, 55);
+  background: linear-gradient(50deg, #cacaca 20%, #d3a693 60%);
 }
 
 #length-calc-component {
@@ -37,16 +29,9 @@ section {
 }
 
 h1 {
-text-align: center;
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background: linear-gradient(50deg, #cacaca 20%, #d3a693 60%);
-  }
+    text-align: center;
+    font-size: 3.2em;
+    line-height: 1.1;
 }
 
 .leaflet-container {
@@ -77,6 +62,7 @@ input {
     margin-top: -55px;
     z-index: 9;
     margin-left: 300px;
+    font-weight: bold;
 }
 
 #select1 {
